Changed the rule creation panel descriptions (en)

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -93,28 +93,28 @@ SourceTreeCell.remove=Remove Ignore
 SourceTreeLoading.title=Loading...
 SourceTreeLoadMore.title=Load More...
 
-association.singleSip.title = One description item for all selected files or folders
-association.singleSip.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+association.singleSip.title = One description item with all selected files and/or folders
+association.singleSip.description = Use this option to create one and only one SIP containing all selected files and folders. If you selected five folders and/or files the association will result in one SIP corresponding to one item with a set description level.
 
 association.sipSelection.title = One description item for each selected files or folders
-association.sipSelection.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+association.sipSelection.description = Use this option to create a SIP for each of the selected files or folders. If you selected five files and/or folders, the association will create five SIPs, i.e. five descriptive items. Each one of these items can correspond to a distinct description level.
 
 association.sipPerFile.title = One description item for each file under the selected folder(s)
-association.sipPerFile.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+association.sipPerFile.description = Use this option to create one SIP for each file under the selected folder(s). This operation will create a set of SIPs equal to the number of files under the selected folder(s).
 
 association.sipPerFolder.title = One description item for each folder under the selected folder(s)
-association.sipPerFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+association.sipPerFolder.description = Use this option to create a SIP for each folder under the selected folder(s). This operation will create a set of SIPs equal to the amount of folders under the selected folder(s) until the selected level.
 
 metadata.singleFile.title = Load from a single file
-metadata.singleFile.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+metadata.singleFile.description = Use this option to add to each SIP one metadata file of your choice. The selected file will be added to each of the created SIPs.
 
-metadata.sameFolder.title = Load from the directory
-metadata.sameFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+metadata.sameFolder.title = Load from each directory
+metadata.sameFolder.description = Use this option to include in the SIP a metadata file located in the root of the directory used to create the packet. The metadata file must have a defined pattern (e.g. metadata.*).
 
-metadata.diffFolder.title = Load from another directory
-metadata.diffFolder.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+metadata.diffFolder.title = Load from one directory
+metadata.diffFolder.description = Use this option to select one directory where all the metadata files to include in the SIPs can be found. The association between metadata files and SIPs is done through the file name (ignoring the extension). In the cases where no association can be made, the SIP will not contain metadata.
 
 metadata.template.title = Create new metadata from a template
-metadata.template.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
+metadata.template.description = Use this option to create metadata from a predefined model. The associated metadata for each SIP will be the same. After the SIP creation, the user should edit the metadata according to the data associated to each packet.
 
 
