New Dublin Core template and added two missing translations

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -28,6 +28,8 @@ CreationModalProcessing.errors=\ errors
 CreationModalProcessing.hours=hours
 CreationModalProcessing.minutes=mins
 CreationModalProcessing.seconds=secs
+CreationModalProcessing.remaining=Remaining time
+CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 
 FileExplorerPane.chooseDir=Choose directory
 FileExplorerPane.help.title=Choose your\nworking directory
