--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -28,6 +28,8 @@ CreationModalProcessing.errors=\ erros
 CreationModalProcessing.hours=horas
 CreationModalProcessing.minutes=mins
 CreationModalProcessing.seconds=segs
+CreationModalProcessing.remaining=Tempo estimado
+CreationModalProcessing.subtitle=Criado %d de %d (%d%%)
 
 FileExplorerPane.chooseDir=Escolher
 FileExplorerPane.help.title=Escolha a sua\npasta de trabalho
