Made the time estimate messages less specific to deal with imprecision

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -26,8 +26,11 @@ CreationModalProcessing.action=Action
 CreationModalProcessing.currentSip=Current SIP
 CreationModalProcessing.errors=\ errors
 CreationModalProcessing.hours=hours
-CreationModalProcessing.minutes=mins
-CreationModalProcessing.seconds=secs
+CreationModalProcessing.lessMinute=Less than 1 minute
+CreationModalProcessing.minutes=minutes
+CreationModalProcessing.lessSeconds=Less than 30 seconds
+CreationModalProcessing.finished=Finished
+CreationModalProcessing.impossibleEstimate=Impossible to estimate time
 CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 
