--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -23,11 +23,14 @@ CreationModalPreparation.creatingSips=A criar pacotes de submissão
 CreationModalPreparation.outputDirectory=Pasta de saída
 CreationModalPreparation.sipFormat=Formato do pacote de submissão
 CreationModalProcessing.action=Ação
-CreationModalProcessing.currentSip=Pacote de submissão atual
+CreationModalProcessing.currentSip=Título
 CreationModalProcessing.errors=\ erros
 CreationModalProcessing.hours=horas
-CreationModalProcessing.minutes=mins
-CreationModalProcessing.seconds=segs
+CreationModalProcessing.lessMinute=Menos de 1 minuto
+CreationModalProcessing.minutes=minutos
+CreationModalProcessing.lessSeconds=Menos de 30 segundos
+CreationModalProcessing.finished=Terminado
+CreationModalProcessing.impossibleEstimate=Não é possível estimar o tempo
 CreationModalProcessing.remaining=Tempo estimado
 CreationModalProcessing.subtitle=Criado %d de %d (%d%%)
 
