Improved scheme nodes naming system. Improved ETA presentation.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -25,8 +25,10 @@ CreationModalPreparation.sipFormat=SIP format
 CreationModalProcessing.action=Action
 CreationModalProcessing.currentSip=Current SIP
 CreationModalProcessing.errors=\ errors
+CreationModalProcessing.hour=hour
 CreationModalProcessing.hours=hours
 CreationModalProcessing.lessMinute=Less than 1 minute
+CreationModalProcessing.minute=minute
 CreationModalProcessing.minutes=minutes
 CreationModalProcessing.lessSeconds=Less than 30 seconds
 CreationModalProcessing.finished=Finished
