--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -26,7 +26,9 @@ CreationModalProcessing.action=Ação
 CreationModalProcessing.currentSip=Título
 CreationModalProcessing.errors=\ erros
 CreationModalProcessing.hours=horas
+CreationModalProcessing.hour=hora
 CreationModalProcessing.lessMinute=Menos de 1 minuto
+CreationModalProcessing.minute=minuto
 CreationModalProcessing.minutes=minutos
 CreationModalProcessing.lessSeconds=Menos de 30 segundos
 CreationModalProcessing.finished=Terminado
