Fixed the size of the top of the inspection pane. Added promptText to the metadata textarea of the inspection pane.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -45,6 +45,7 @@ InspectionPane.help.ruleList=Associate files/directories \nto a description obje
 InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
 InspectionPane.skip=Skip Directory
 InspectionPane.metadata=Metadata
+InspectionPane.metadata.placeholder=Write the description node's metadata here
 InspectionPane.rules=Rules
 
 LoadingPane.createAssociation=Create association to
