Allows the creation of associations when dropping files in the inspection pane's empty rules list.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -46,6 +46,7 @@ InspectionPane.help.title=Select an item from \nthe classification scheme\nto in
 InspectionPane.skip=Skip Directory
 InspectionPane.metadata=Metadata
 InspectionPane.metadata.placeholder=Write the description node's metadata here
+InspectionPane.onDrop=Create association
 InspectionPane.rules=Rules
 
 LoadingPane.createAssociation=Create association to
