--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -46,6 +46,7 @@ InspectionPane.help.title=Escolha um item \ndo plano de classificação\npara o 
 InspectionPane.skip=Saltar pasta
 InspectionPane.metadata=Metadados
 InspectionPane.metadata.placeholder=Introduza os metadados do nível descritivo aqui
+InspectionPane.onDrop=Criar associação
 InspectionPane.rules=Regras
 
 LoadingPane.createAssociation=Criar associação a
