Redesigned the scheme pane help panel and added way to create SIPs without a classification scheme

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -17,6 +17,7 @@ ignore=Ignorar
 load=Carregar
 remove=Remover
 start=Começar
+root=Raiz
 
 CreationModalPreparation.choose=Escolher...
 CreationModalPreparation.creatingSips=A criar pacotes de submissão
@@ -87,11 +88,12 @@ SchemaNode.items.format=%s  (%d itens)
 SchemaNode.items.formatSimple=\  (%d itens)
 
 SchemaPane.add=Adicionar nível descritivo
-SchemaPane.help.title=Carregue o\nplano de classificação
+SchemaPane.help.title=Arraste ficheiros ou pastas\npara criar uma associação
 SchemaPane.newNode=Novo nível descritivo
 SchemaPane.remove=Remover nível descritivo
 SchemaPane.title=Plano de classificação
-SchemaPane.create=novo plano de classificação
+SchemaPane.create=Criar um plano de classificação novo
+SchemaPane.load=Carregar um plano de classificação
 SchemaPane.or=ou crie um
 
 SimpleSipCreator.copyingData=A copiar os dados do pacote de submissão
