Changed from hyperlinks to buttons in the scheme pane

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -92,8 +92,8 @@ SchemaPane.help.title=Arraste ficheiros ou pastas\npara criar uma associação
 SchemaPane.newNode=Novo nível descritivo
 SchemaPane.remove=Remover nível descritivo
 SchemaPane.title=Plano de classificação
-SchemaPane.create=Criar um plano de classificação novo
-SchemaPane.load=Carregar um plano de classificação
+SchemaPane.create=Criar plano\nde classificação
+SchemaPane.load=Carregar plano\nde classificação
 SchemaPane.or=ou crie um
 
 SimpleSipCreator.copyingData=A copiar os dados do pacote de submissão
