Improved the look of the export modal and allowed the exportation of SIPs created without a classification scheme

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -34,7 +34,7 @@ CreationModalProcessing.minutes=minutos
 CreationModalProcessing.lessSeconds=Menos de 30 segundos
 CreationModalProcessing.finished=Terminado
 CreationModalProcessing.impossibleEstimate=Não é possível estimar o tempo
-CreationModalProcessing.remaining=Tempo estimado
+CreationModalProcessing.remaining=Previsão
 CreationModalProcessing.subtitle=Criado %d de %d (%d%%)
 
 FileExplorerPane.chooseDir=Escolher
