Improved SIP removal feedback

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -81,7 +81,7 @@ RuleModalPane.metadataMethod=Escolher o método de metadados
 RuleModalProcessing.createdPreviews=%d associações criadas
 RuleModalProcessing.creatingPreview=A criar associações
 RuleModalProcessing.processedDirsFiles=%d pastas e %d ficheiros processados
-RuleModalRemoving.removedFormat=%d (%d%%) pacotes de submissão removidos
+RuleModalRemoving.removedFormat=%d%% dos pacotes de submissão removidos
 RuleModalRemoving.title=A remover pacotes de submissão
 
 SchemaNode.items.format=%s  (%d itens)
