Changed the scheme pane help panel back

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -87,14 +87,14 @@ RuleModalRemoving.title=A remover pacotes de submissão
 SchemaNode.items.format=%s  (%d itens)
 SchemaNode.items.formatSimple=\  (%d itens)
 
-SchemaPane.add=Adicionar nível descritivo
-SchemaPane.help.title=Arraste ficheiros ou pastas\npara criar uma associação
+SchemaPane.add=Adicionar
+SchemaPane.help.title=Carregue o\nplano de classificaçao
 SchemaPane.newNode=Novo nível descritivo
-SchemaPane.remove=Remover nível descritivo
+SchemaPane.remove=Remover
 SchemaPane.title=Plano de classificação
-SchemaPane.create=Criar plano\nde classificação
+SchemaPane.create=crie um plano de classificação
 SchemaPane.load=Carregar plano\nde classificação
-SchemaPane.or=ou crie um
+SchemaPane.or=ou
 
 SimpleSipCreator.copyingData=A copiar os dados do pacote de submissão
 SimpleSipCreator.copyingMetadata=A copiar os metadados do pacote de submissão
