Allowed drop to any part of the scheme pane

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -129,6 +129,7 @@ metadata.diffFolder.description = Use esta opção para selecionar uma pasta ond
 metadata.template.title = Criar metadados a partir de um modelo
 metadata.template.description = Use esta opção para criar metadados a partir do modelo definido na configuração. Os metadados associados a cada pacote de submissão serão todos iguais. Após a criação dos pacotes o utilizador deverá editar os metadados de acordo com os dados associados a cada pacote.
 export=Exportar
+SchemaPane.dragHelp=Arraste ficheiros ou pastas\npara criar uma associação
 
 
 
