--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -132,6 +132,8 @@ export=Exportar
 SchemaPane.dragHelp=Arraste ficheiros ou pastas\npara criar uma associação
 SchemaPane.confirmRemove.header=Tem a certeza que quer remover este nível?
 SchemaPane.confirmRemove.content=Este processo irá remover %d pacote(s) de submissão.
+SchemaPane.confirmNewScheme.header=Tem a certeza que quer um esquema de classificação novo?
+SchemaPane.confirmNewScheme.content=Todo o progresso será perdido.
 
 
 
