Improved the texts of the dialogs

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -132,8 +132,10 @@ export=Exportar
 SchemaPane.dragHelp=Arraste ficheiros ou pastas\npara criar uma associação
 SchemaPane.confirmRemove.header=Tem a certeza que quer remover este nível?
 SchemaPane.confirmRemove.content=Este processo irá remover %d pacote(s) de submissão.
-SchemaPane.confirmNewScheme.header=Tem a certeza que quer um esquema de classificação novo?
+SchemaPane.confirmNewScheme.header=Tem a certeza que pretende remover o esquema de classificação atual?
 SchemaPane.confirmNewScheme.content=Todo o progresso será perdido.
+SchemaPane.confirmNewScheme.title=Confirmar novo esquema de classificação
+SchemaPane.confirmRemove.title=Confirmar remoção do nível
 
 
 
