Added "Reset application" menu item

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -23,7 +23,7 @@ CreationModalPreparation.choose=Choose...
 CreationModalPreparation.creatingSips=Creating SIPs
 CreationModalPreparation.outputDirectory=Output directory
 CreationModalPreparation.sipFormat=SIP format
-CreationModalProcessing.action=Action
+CreationModalProcessing.action=Status
 CreationModalProcessing.currentSip=Current SIP
 CreationModalProcessing.errors=\ errors
 CreationModalProcessing.hour=hour
@@ -136,6 +136,10 @@ SchemaPane.confirmNewScheme.content=All progress will be lost
 SchemaPane.confirmNewScheme.title=Confirm new classification scheme
 SchemaPane.confirmRemove.title=Confirm removal of level
 CreationModalProcessing.eark.progress=Added %d of %d files to the zip
+done=Done
+Main.reset=Reset application
+Main.confirmReset.header=Are you sure you want to reset the application?
+Main.confirmReset.content=All progress will be lost.
 
 
 
