--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -23,7 +23,7 @@ CreationModalPreparation.choose=Escolher...
 CreationModalPreparation.creatingSips=A criar pacotes de submissão
 CreationModalPreparation.outputDirectory=Pasta de saída
 CreationModalPreparation.sipFormat=Formato do pacote de submissão
-CreationModalProcessing.action=Ação
+CreationModalProcessing.action=Estado
 CreationModalProcessing.currentSip=Título
 CreationModalProcessing.errors=\ erros
 CreationModalProcessing.hours=horas
@@ -137,6 +137,10 @@ SchemaPane.confirmNewScheme.content=Todo o progresso será perdido.
 SchemaPane.confirmNewScheme.title=Confirmar novo esquema de classificação
 SchemaPane.confirmRemove.title=Confirmar remoção do nível
 CreationModalProcessing.eark.progress=Adicionados %d de %d ficheiros ao zip
+done=Concluído
+Main.reset=Reiniciar aplicação
+Main.confirmReset.header=Tem a certeza que quer reiniciar a aplicação?
+Main.confirmReset.content=Todo o progresso será perdido.
 
 
 
