Fixed size of textarea of the export alert. Fixed #83. Other bug fixes.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -145,6 +145,7 @@ CreationModalProcessing.alert.title=Erro na exportação
 CreationModalProcessing.alert.header=O pacote "%s" não foi exportado devido a um erro
 CreationModalProcessing.alert.content=Para mais informações sobre o erro veja os detalhes.
 CreationModalProcessing.alert.stacktrace=O stacktrace da exceção foi\:
+CreationModalProcessing.representation=A processar representação
 
 
 
