--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -142,9 +142,9 @@ Main.confirmReset.header=Are you sure you want to reset the application?
 Main.confirmReset.content=All progress will be lost.
 CreationModalProcessing.alert.title=Exporting error
 CreationModalProcessing.alert.header=The SIP "%s" could not be exported due to an error
-CreationModalProcessing.alert.content=Check the details for more information about the error.
 CreationModalProcessing.alert.stacktrace=The exception stacktrace was\:
 CreationModalProcessing.representation=Processing representation
+CreationModalProcessing.cause=Cause
 
 
 
