--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -143,9 +143,9 @@ Main.confirmReset.header=Tem a certeza que quer reiniciar a aplicação?
 Main.confirmReset.content=Todo o progresso será perdido.
 CreationModalProcessing.alert.title=Erro na exportação
 CreationModalProcessing.alert.header=O pacote "%s" não foi exportado devido a um erro
-CreationModalProcessing.alert.content=Para mais informações sobre o erro veja os detalhes.
 CreationModalProcessing.alert.stacktrace=O stacktrace da exceção foi\:
 CreationModalProcessing.representation=A processar representação
+CreationModalProcessing.cause=Causa
 
 
 
