Fixes to the interface and messages

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -16,7 +16,7 @@ files=\ ficheiros
 ignore=Ignorar
 load=Carregar
 remove=Remover
-start=Começar
+start=Iniciar
 root=Raiz
 
 CreationModalPreparation.choose=Escolher...
@@ -138,8 +138,8 @@ SchemaPane.confirmNewScheme.title=Confirmar novo esquema de classificação
 SchemaPane.confirmRemove.title=Confirmar remoção do nível
 CreationModalProcessing.eark.progress=Adicionados %d de %d ficheiros ao zip
 done=Concluído
-Main.reset=Reiniciar aplicação
-Main.confirmReset.header=Tem a certeza que quer reiniciar a aplicação?
+Main.reset=Novo projeto
+Main.confirmReset.header=Tem a certeza que quer criar um novo projeto?
 Main.confirmReset.content=Todo o progresso será perdido.
 CreationModalProcessing.alert.title=Erro na exportação
 CreationModalProcessing.alert.header=O pacote "%s" não foi exportado devido a um erro
