--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -146,6 +146,11 @@ CreationModalProcessing.alert.header=O pacote "%s" não foi exportado devido a u
 CreationModalProcessing.alert.stacktrace=O stacktrace da exceção foi\:
 CreationModalProcessing.representation=A processar representação
 CreationModalProcessing.cause=Causa
+metadataValue.id=ID
+metadataValue.title=Título
+metadataValue.repcode=Código do Repositório
+metadataValue.date=Data
+Main.classScheme=Plano de classificação
 
 
 
