Updates the name of the SIP when the title is edited in the metadata form

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -135,7 +135,7 @@ SchemaPane.confirmNewScheme.header=Are you sure you want to remove the current c
 SchemaPane.confirmNewScheme.content=All progress will be lost
 SchemaPane.confirmNewScheme.title=Confirm new classification scheme
 SchemaPane.confirmRemove.title=Confirm removal of level
-CreationModalProcessing.eark.progress=Added %d of %d files to the zip
+CreationModalProcessing.eark.progress=Added %d of %d files
 done=Done
 Main.reset=New project
 Main.confirmReset.header=Are you sure you want to create a new project?
