--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -136,7 +136,7 @@ SchemaPane.confirmNewScheme.header=Tem a certeza que pretende remover o esquema 
 SchemaPane.confirmNewScheme.content=Todo o progresso será perdido.
 SchemaPane.confirmNewScheme.title=Confirmar novo esquema de classificação
 SchemaPane.confirmRemove.title=Confirmar remoção do nível
-CreationModalProcessing.eark.progress=Adicionados %d de %d ficheiros ao zip
+CreationModalProcessing.eark.progress=Adicionados %d de %d ficheiros
 done=Concluído
 Main.reset=Novo projeto
 Main.confirmReset.header=Tem a certeza que quer criar um novo projeto?
