Fixed #88. Added option to change language in the menu.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -151,6 +151,10 @@ metadataValue.title=Título
 metadataValue.repcode=Código do Repositório
 metadataValue.date=Data
 Main.classScheme=Plano de classificação
+Main.language=Idioma
+Main.updateLang.title=Atualizar idioma
+Main.updateLang.header=O idioma foi atualizado
+Main.updateLang.content=Reinicie a aplicação para ver as modificações
 
 
 
