Improved the way the metadavaValues are created. Added a datePicker and description level selector to the metadata form. Added a button to save the metadata.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -155,6 +155,7 @@ Main.language=Idioma
 Main.updateLang.title=Atualizar idioma
 Main.updateLang.header=O idioma foi atualizado
 Main.updateLang.content=Reinicie a aplicação para ver as modificações
+metadataValue.level=Nível
 
 
 
