Added support for a few new template replaceable values. Updated templates.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -156,6 +156,11 @@ Main.updateLang.title=Atualizar idioma
 Main.updateLang.header=O idioma foi atualizado
 Main.updateLang.content=Reinicie a aplicação para ver as modificações
 metadataValue.level=Nível
+metadataValue.description=Descrição
+metadataValue.rights=Restrições
+metadataValue.language=Idioma
+metadataValue.producer=Produtor
+metadataValue.creator=Criador
 
 
 
