Minor fixes. Updated the tests.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -52,16 +52,16 @@ InspectionPane.rules=Regras
 
 LoadingPane.createAssociation=Criar associação a
 
-Main.createCS = Novo plano de classificação
+Main.createCS = Novo
 Main.edit=Editar
-Main.exportCS=Exportar plano de classificação
+Main.exportCS=Exportar
 Main.exportSips=Exportar pacotes de submissão
 Main.file=Ficheiro
 Main.hideFiles=Esconder ficheiros
 Main.hideIgnored=Esconder ignorados
 Main.hideMapped=Esconder mapeados
 Main.ignoreItems=Ignorar itens
-Main.loadCS=Carregar plano de classificação
+Main.loadCS=Carregar
 Main.openFolder=Abrir pasta
 Main.quit=Sair
 Main.showFiles=Mostrar ficheiros
