--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -62,7 +62,7 @@ Main.hideIgnored=Esconder ignorados
 Main.hideMapped=Esconder mapeados
 Main.ignoreItems=Ignorar itens
 Main.loadCS=Carregar
-Main.openFolder=Abrir pasta
+Main.addFolder=Adicionar pasta
 Main.quit=Sair
 Main.showFiles=Mostrar ficheiros
 Main.showIgnored=Mostrar ignorados
@@ -161,6 +161,7 @@ metadataValue.rights=Restrições
 metadataValue.language=Idioma
 metadataValue.producer=Produtor
 metadataValue.creator=Criador
+FileExplorerPane.removeFolder=Remover pasta
 
 
 
