Fixed metadata form interface bug. Fixed maximize issue when using MacOs.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -162,6 +162,7 @@ metadataValue.language=Idioma
 metadataValue.producer=Produtor
 metadataValue.creator=Criador
 FileExplorerPane.removeFolder=Remover pasta
+data=Dados
 
 
 
