Added "Add representation" and "Remove representation" buttons

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -163,6 +163,8 @@ metadataValue.producer=Produtor
 metadataValue.creator=Criador
 FileExplorerPane.removeFolder=Remover pasta
 data=Dados
+InspectionPane.addRepresentation=Adicionar representação
+InspectionPane.removeRepresentation=Remover representação
 
 
 
