Added SIP support for documentation and a way of adding it

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -165,6 +165,7 @@ FileExplorerPane.removeFolder=Remover pasta
 data=Dados
 InspectionPane.addRepresentation=Adicionar representação
 InspectionPane.removeRepresentation=Remover representação
+documentation=Documentação
 
 
 
