Added help panel to the SIP documentation. Started implementing way of removing documentation (WIP)

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -166,6 +166,8 @@ data=Dados
 InspectionPane.addRepresentation=Adicionar representação
 InspectionPane.removeRepresentation=Remover representação
 documentation=Documentação
+InspectionPane.docsHelp.title=Arraste ficheiros/pastas\npara adicionar documentação
+InspectionPane.onDropDocs=Adicionar documentação
 
 
 
