Added support for multiple item selection in the SIP documentation and data trees. Added documentation to exported EARK SIPs.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -168,6 +168,8 @@ InspectionPane.removeRepresentation=Remover representação
 documentation=Documentação
 InspectionPane.docsHelp.title=Arraste ficheiros/pastas\npara adicionar documentação
 InspectionPane.onDropDocs=Adicionar documentação
+SimpleSipCreator.documentation=A adicionar documentação
+SimpleSipCreator.initZIP=A criar zip
 
 
 
