--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -170,6 +170,9 @@ InspectionPane.docsHelp.title=Arraste ficheiros/pastas\npara adicionar documenta
 InspectionPane.onDropDocs=Adicionar documentação
 SimpleSipCreator.documentation=A adicionar documentação
 SimpleSipCreator.initZIP=A criar zip
+FileExplorerPane.alertAddFolder.content=Não foi possível adicionar a pasta "%s" \numa vez que "%s" foi adicionada anteriormente.
+FileExplorerPane.alertAddFolder.title=Adicionar pasta
+FileExplorerPane.alertAddFolder.header=Não foi possível adicionar a pasta
 
 
 
