--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -66,7 +66,7 @@ Main.addFolder=Adicionar pasta
 Main.quit=Sair
 Main.showFiles=Mostrar ficheiros
 Main.showIgnored=Mostrar ignorados
-Main.showMapped=Mostrar mapeados
+Main.showMapped=Mostrar seleccionados
 Main.useJava8=A versão do Java é %s. Use pelo menos \\"Java 1.8\\".
 Main.view=Ver
 
