--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -114,8 +114,8 @@ association.sipSelection.description = Use esta opção para criar um pacote de 
 association.sipPerFile.title = Um item de descrição por cada ficheiro existente sob a(s) pasta(s) selecionada(s)
 association.sipPerFile.description = Use esta opção para criar um pacote de submissão por cada ficheiro que se encontre sob as pastas selecionadas. Esta operação irá criar um conjunto de pacotes de submissão igual ao número de ficheiros que se encontram sob as pastas selecionadas.
 
-association.sipPerFolder.title =  Um item de descrição por cada pasta existente sob a(s) pasta(s) selecionada(s)
-association.sipPerFolder.description = Use esta opção para criar um pacote de submissão por cada pasta que se encontre sob as pastas selecionadas. Esta operação irá criar um conjunto de pacotes de submissão igual ao número de pastas que se encontram sob as pastas selecionadas até ao nível de pastas selecionado.  
+association.sipWithStructure.title =  Um item de descrição por cada pasta existente sob a(s) pasta(s) selecionada(s)
+association.sipWithStructure.description = Use esta opção para criar um pacote de submissão por cada pasta que se encontre sob as pastas selecionadas. Esta operação irá criar um conjunto de pacotes de submissão igual ao número de pastas que se encontram sob as pastas selecionadas até ao nível de pastas selecionado.
 
 metadata.singleFile.title = Carregar a partir de um ficheiro
 metadata.singleFile.description = Use esta opção para adicionar a cada pacote de submissão um ficheiro de metadados à sua escolha. O ficheiro selecionado será adicionado a cada um dos pacotes de submissão gerados.
