ResourceResolver now tries to get the import from the internet if the attribute is a URL. Updated some language strings.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -87,9 +87,9 @@ SchemaPane.help.title=Carregue o\nplano de classificaçao
 SchemaPane.newNode=Novo nível descritivo
 SchemaPane.remove=Remover
 SchemaPane.title=Plano de classificação
-SchemaPane.create=crie um plano de classificação
+SchemaPane.create=novo plano de classificação
 SchemaPane.load=Carregar plano\nde classificação
-SchemaPane.or=ou
+SchemaPane.or=ou crie um
 
 SimpleSipCreator.copyingData=A copiar os dados do pacote de submissão
 SimpleSipCreator.copyingMetadata=A copiar os metadados do pacote de submissão
@@ -126,7 +126,7 @@ metadata.template.description = Use esta opção para criar metadados a partir d
 export=Exportar
 SchemaPane.dragHelp=Arraste ficheiros ou pastas\npara criar uma associação
 SchemaPane.confirmRemove.header=Tem a certeza que quer remover este nível?
-SchemaPane.confirmRemove.content=Este processo irá remover %d pacote(s) de submissão.
+SchemaPane.confirmRemove.content=Este processo irá remover todos os níveis descritivos seleccionados.
 SchemaPane.confirmNewScheme.header=Tem a certeza que pretende remover o esquema de classificação atual?
 SchemaPane.confirmNewScheme.content=Todo o progresso será perdido.
 SchemaPane.confirmNewScheme.title=Confirmar novo esquema de classificação
