Some general fixes

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -38,7 +38,7 @@ CreationModalProcessing.remaining=Previsão
 CreationModalProcessing.subtitle=Criado %d de %d (%d%%)
 
 FileExplorerPane.chooseDir=Escolher
-FileExplorerPane.help.title=Escolha a sua\npasta de trabalho
+FileExplorerPane.help.title=Selecione as pastas\nque contêm os seus ficheiros
 FileExplorerPane.title=Explorador de ficheiros
 
 InspectionPane.help.ruleList=Associe ficheiros/pastas \na um nível de descrição \npara criar uma regra
