Added tooltips to the wordless buttons. If a translation is missing, tries to use English.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -167,6 +167,9 @@ SimpleSipCreator.initZIP=A criar zip
 FileExplorerPane.alertAddFolder.content=Não foi possível adicionar a pasta "%s" \numa vez que "%s" foi adicionada anteriormente.
 FileExplorerPane.alertAddFolder.title=Adicionar pasta
 FileExplorerPane.alertAddFolder.header=Não foi possível adicionar a pasta
+InspectionPane.validate=Validar
+InspectionPane.textContent=Conteúdo textual
+InspectionPane.form=Formulário
 
 
 
