Minor refactor of the InspectionPane code. Improved the way the metadata buttons are displayed.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -170,6 +170,7 @@ FileExplorerPane.alertAddFolder.header=Não foi possível adicionar a pasta
 InspectionPane.validate=Validar
 InspectionPane.textContent=Conteúdo textual
 InspectionPane.form=Formulário
+InspectionPane.addMetadata=Adicionar metadados
 
 
 
