Added "Remove metadata" button, with a confirmation dialog.

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -171,6 +171,10 @@ InspectionPane.validate=Validate
 InspectionPane.textContent=Text content
 InspectionPane.form=Form
 InspectionPane.addMetadata=Add metadata
+InspectionPane.removeMetadata=Remove metadata file
+InspectionPane.removeMetadata.header=Are you sure you want to remove this metadata file?
+InspectionPane.removeMetadata.title=Remove metadata file
+InspectionPane.removeMetadata.content=All progress will be lost.
 
 
 
