--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -171,6 +171,10 @@ InspectionPane.validate=Validar
 InspectionPane.textContent=Conteúdo textual
 InspectionPane.form=Formulário
 InspectionPane.addMetadata=Adicionar metadados
+InspectionPane.removeMetadata=Remover ficheiro de metadados
+InspectionPane.removeMetadata.title=Remover ficheiro de metadados
+InspectionPane.removeMetadata.header=Tem a certeza que pretende remover o ficheiro de metadados?
+InspectionPane.removeMetadata.content=Todo o progresso será perdido.
 
 
 
