Improved the AddMetadataPane

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -175,6 +175,9 @@ InspectionPane.removeMetadata=Remover ficheiro de metadados
 InspectionPane.removeMetadata.title=Remover ficheiro de metadados
 InspectionPane.removeMetadata.header=Tem a certeza que pretende remover o ficheiro de metadados?
 InspectionPane.removeMetadata.content=Todo o progresso será perdido.
+metadata.emptyFile.title=Criar um ficheiro novo
+metadata.emptyFile.description=Use esta opção se pretende criar um novo ficheiro e editá-lo posteriormente.
+name=Nome
 
 
 
