Don't allow more than one metadata file with the same name in each description object.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -178,6 +178,9 @@ InspectionPane.removeMetadata.content=Todo o progresso será perdido.
 metadata.emptyFile.title=Criar um ficheiro novo
 metadata.emptyFile.description=Use esta opção se pretende criar um novo ficheiro e editá-lo posteriormente.
 name=Nome
+InspectionPane.addMetadataError.title=Adicionar ficheiro de metadadods
+InspectionPane.addMetadataError.header=Erro ao adicionar ficheiro de metadados
+InspectionPane.addMetadataError.content=Já existe um ficheiro com o nome "%s" na lista de metadados do objecto descritivo.
 
 
 
