Added elapsed time to SIP creation. Improved the way the metadata is associated to the SIPs in SipPerFile. The SipPreviewNodes are only created and added after the creation is finished.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -181,6 +181,7 @@ name=Nome
 InspectionPane.addMetadataError.title=Adicionar ficheiro de metadadods
 InspectionPane.addMetadataError.header=Erro ao adicionar ficheiro de metadados
 InspectionPane.addMetadataError.content=Já existe um ficheiro com o nome "%s" na lista de metadados do objecto descritivo.
+CreationModalProcessing.elapsed=Duração
 
 
 
