Fixed bug where the metadata form wasn't being correctly shown. Added pane to help the user when there's no metadata in a SIP.

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -182,6 +182,7 @@ InspectionPane.addMetadataError.title=Adicionar ficheiro de metadadods
 InspectionPane.addMetadataError.header=Erro ao adicionar ficheiro de metadados
 InspectionPane.addMetadataError.content=Já existe um ficheiro com o nome "%s" na lista de metadados do objecto descritivo.
 CreationModalProcessing.elapsed=Duração
+add=Adicionar
 
 
 
