Added translations to some known form tags

--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -183,6 +183,17 @@ InspectionPane.addMetadataError.header=Erro ao adicionar ficheiro de metadados
 InspectionPane.addMetadataError.content=Já existe um ficheiro com o nome "%s" na lista de metadados do objecto descritivo.
 CreationModalProcessing.elapsed=Duração
 add=Adicionar
+metadata.id=ID
+metadata.title=Título
+metadata.producer=Produtor
+metadata.now=Hoje
+metadata.dateInitial=Data inicial
+metadata.dateFinal=Data final
+metadata.creator=Criador
+metadata.language=Idioma
+metadata.description=Descrição
+metadata.rights=Direitos
+metadata.level=Nível descritivo
 
 
 
