Started to add a theme to improve the interface

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.impossibleEstimate=Impossible to estimate time
 CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 
-FileExplorerPane.chooseDir=Choose directory
+FileExplorerPane.chooseDir=Choose folder
 FileExplorerPane.help.title=Choose the folders\nthat contain your files
 FileExplorerPane.title=Source File Explorer
 
@@ -194,6 +194,7 @@ metadata.language=Language
 metadata.description=Description
 metadata.rights=Rights
 metadata.level=Description level
+InspectionPane.title=Inspection
 
 
 
