--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.impossibleEstimate=Não é possível estimar o tempo
 CreationModalProcessing.remaining=Previsão
 CreationModalProcessing.subtitle=Criado %d de %d (%d%%)
 
-FileExplorerPane.chooseDir=Escolher
+FileExplorerPane.chooseDir=Escolher pasta
 FileExplorerPane.help.title=Selecione as pastas\nque contêm os seus ficheiros
 FileExplorerPane.title=Explorador de ficheiros
 
@@ -194,6 +194,7 @@ metadata.language=Idioma
 metadata.description=Descrição
 metadata.rights=Direitos
 metadata.level=Nível descritivo
+InspectionPane.title=Inspecionar
 
 
 
